[package]
name = "present24"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
jemallocator = "0.3.2"
crossbeam-channel = "0.5.1"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
